--- a/guake.conf
+++ b/guake.conf
@@ -7,7 +7,7 @@ history-size=1000
 infinite-history=true
 max-tab-name-length=100
 mouse-display=true
-open-tab-cwd=true
+open-tab-cwd=false
 prompt-on-quit=true
 quick-open-command-line='gedit %(file_path)s'
 quick-open-enable=true
@@ -21,12 +21,12 @@ use-popup=false
 use-scrollbar=true
 use-trayicon=true
 window-halignment=0
-window-height=100
+window-height=98
 window-losefocus=false
 window-refocus=false
 window-tabbar=true
 window-width=100
-workspace-specific-tab-sets=true
+workspace-specific-tab-sets=false
 
 [keybindings/global]
 show-hide='<Primary>grave'
