--- a/guake.conf
+++ b/guake.conf
@@ -1,9 +1,14 @@
 [general]
 abbreviate-tab-names=false
 compat-delete='delete-sequence'
+copy-on-select=true
 display-n=0
+display-tab-names=0
+fullscreen-hide-tabbar=false
 gtk-prefer-dark-theme=true
-history-size=1000
+gtk-use-system-default-theme=true
+hide-tabs-if-one-tab=false
+history-size=10000000
 infinite-history=true
 max-tab-name-length=100
 mouse-display=true
@@ -16,16 +21,17 @@ restore-tabs-startup=false
 save-tabs-when-changed=false
 scroll-keystroke=true
 start-at-login=true
+start-fullscreen=true
 use-default-font=true
 use-popup=false
 use-scrollbar=true
-use-trayicon=true
+use-trayicon=false
 window-halignment=0
-window-height=98
+window-height=100
 window-losefocus=false
 window-refocus=false
 window-tabbar=true
-window-width=100
+window-width=92
 workspace-specific-tab-sets=false
 
 [keybindings/global]
@@ -40,6 +46,10 @@ next-tab='<Alt>k'
 previous-tab='<Alt>j'
 split-tab-horizontal='<Alt>period'
 split-tab-vertical='<Alt>comma'
+
+[style]
+cursor-blink-mode=1
+cursor-shape=1
 
 [style/background]
 transparency=88
